--- a/website/_config.yml
+++ b/website/_config.yml
@@ -1,6 +1,7 @@
 full_rebuild: true
 name: Microsoft Cities Unlocked
 author: Ryan, Nadia and Stefan
+url: http://students.cs.ucl.ac.uk/2016/group4
 version: V 1.0
 encoding: utf-8
 defaults:
