--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,16 @@
   "version": "1.1.1",
   "description": "CitiesUnlocked: An Ionic project",
   "dependencies": {
+    "angular-resource": "^1.6.1",
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "http": "0.0.0",
+    "log": "^1.4.0",
+    "q": "^2.0.3",
+    "timeout": "^0.2.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
