--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.1",
   "description": "CitiesUnlocked: An Ionic project",
   "dependencies": {
+    "@ionic/cloud": "^0.16.0",
     "angular-resource": "^1.6.1",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
