--- a/api/public/web.config
+++ b/api/public/web.config
@@ -19,5 +19,15 @@
         </rule>
       </rules>
     </rewrite>
+    <httpProtocol>
+         <customHeaders>
+             <add name="Access-Control-Allow-Methods" value="GET, POST, DELETE, HEAD" />
+             <add name="Access-Control-Allow-Headers" value="Origin, Content-Type , Authorization, Accept" />
+         </customHeaders>
+     </httpProtocol>
+     <handlers>
+           <remove name="PHP70_via_FastCGI" />
+           <add name="PHP70_via_FastCGI" path="*.php" verb="GET,PUT,POST,DELETE,HEAD,OPTIONS,TRACE,PROPFIND,PROPPATCH,MKCOL,COPY,MOVE,LOCK,UNLOCK" modules="FastCgiModule" scriptProcessor="D:\Program Files (x86)\PHP\v7.0\php-cgi.exe" resourceType="Either" requireAccess="Script" />
+         </handlers>
   </system.webServer>
 </configuration>
